Include iomanip.h because we need the |using std::hex| and |using std::dec| from it to build with libstdc++ 3.0.  b=63604  r=cls@seawood.org